Added title tag and basic data

--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 
-<link rel="stylesheet" type="text/css" href="my.css">
+<link rel="stylesheet" type="text/css" href="widescreen.css">
 
 <main id="main" class="main">
+
+	<!-------- 
+	Basic Data 
+	--------->
+	<meta charset="utf-8">
+	<title>IT Blogs & News</title>
+	<link class="flavicon" rel="icon" type="image/png" href="img/flavicon.png">
+	<meta name="author" content="Abe Choi">
 	
+	<!------------ 
+	Navigation Bar
+	------------->
 	<nav id="top-nav">
 
-		<div class="logo">
-			<a href="#main"><img class="flavicon" src="img/logo.png" ></a>
+		<div class="nav-logo">
+			<a href="#home-section"><img class="logo" src="img/logo.png" ></a>
 			<p class="banner-text">Hello, my name is Abe Choi...</p>
 		</div>
 
 
 		<div class="top-navbar">
+			<a class="top-link" href="#home-section">Home</a>
 			<a class="top-link" href="#project-section">Projects</a>
 			<a class="top-link" href="#blog-section">Blogs</a>
 			<a class="top-link" href="#contact-section">Contacts</a>
@@ -21,10 +33,18 @@
 
 	</nav>
 
+	<!----------
+	Home Section
+	----------->
 	<section class="page-section" id="home-section">
 		
 
 	</section>
+
+	<!-- Uncomment this to activate Project Section
+	--------------- 
+	Project Section
+	---------------
 	<section class="page-section" id="project-section">
 
 
@@ -41,15 +61,32 @@
 		</div>
 
 	</section>
+	Uncomment this to activate Project Section	-->
+
+	<!-- Uncomment this to activate Blog Section
+	------------ 
+	Blog Section
+	------------
 	<section class="page-section" id="blog-section">
 		
 
 	</section>
+	Uncomment this to activate Blog Section	-->
+
+	<!------------- 
+	Contact Section
+	-------------->
 	<section class="page-section" id="contact-section">
 		
 
 	</section>
 
+	<!----
+	Footer
+	----->
+	<footer>
+		
+	</footer>
 
 
 </main>
