Navbar fixed and gradient border added

--- a/index.html
+++ b/index.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 
-<link rel="stylesheet" type="text/css" href="widescreen.css">
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1" name="author" content="Abe Choi">
+	<link rel="stylesheet" type="text/css" href="widescreen.css">
+	<title>IT Blogs & News</title>
+	<link class="flavicon" rel="icon" type="image/png" href="img/flavicon.png"/>
+</head>
 
 <main id="main" class="main">
 
-	<!-------- 
-	Basic Data 
-	--------->
-	<meta charset="utf-8">
-	<title>IT Blogs & News</title>
-	<link class="flavicon" rel="icon" type="image/png" href="img/flavicon.png">
-	<meta name="author" content="Abe Choi">
-	
 	<!------------ 
 	Navigation Bar
 	------------->
-	<nav id="top-nav">
+	<div class="top-nav">
 
-		<div class="nav-logo">
-			<a href="#home-section"><img class="logo" src="img/logo.png" ></a>
-			<p class="banner-text">Hello, my name is Abe Choi...</p>
+		<div class="banner">
+			<a href="#home-section"><img class="logo" src="img/logo.png"></a>
+			<p>Hello! My name is Abe Choi.</p>
 		</div>
 
-
-		<div class="top-navbar">
-			<a class="top-link" href="#home-section">Home</a>
-			<a class="top-link" href="#project-section">Projects</a>
-			<a class="top-link" href="#blog-section">Blogs</a>
-			<a class="top-link" href="#contact-section">Contacts</a>
-			<a class="top-link" href="https://github.com/abechoi">Github</a>
+		<div class="top-nav-right">
+			<a class="active" href="#home-section">Home</a>
+			<a href="#project-section">Projects</a>
+			<a href="#blog-section">Blogs</a>
+			<a href="#contact-section">About</a>
+			<a href="https://github.com/abechoi">Github</a>
 		</div>
 
-	</nav>
+	</div>
 
 	<!----------
 	Home Section
 	----------->
 	<section class="page-section" id="home-section">
-		
+		<p class="section-title">HOME</p>
+		<div class="container demo animated">This is a box</div>
 
 	</section>
 
