Fixed border bug

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	----------->
 	<section class="page-section" id="home-section">
 		<p class="section-title">HOME</p>
-		<div class="container demo animated">This is a box</div>
+		<div class="container animated">This is a box</div>
 
 	</section>
 
