--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 	<!------------ 
 	Navigation Bar
 	------------->
-	<div class="top-nav">
-
-		<div class="banner">
-			<a href="#home-section"><img class="logo" src="img/logo.png"></a>
-			<p>Hello! My name is Abe Choi.</p>
+	<div class="container animated">
+		<div class="top-nav">
+			<div class="top-nav-logo">
+				<a href="#home-section"><img class="logo" src="img/logo.png"></a>
+			</div>
+			<div class="top-nav-message">
+				<p class="message">Hello! My name is Abe Choi.</p>
+			</div>
+			<div class="top-nav-right">
+				<a class="active" href="#home-section">Home</a>
+				<a href="#project-section">Projects</a>
+				<a href="#blog-section">Blogs</a>
+				<a href="#contact-section">About</a>
+				<a href="https://github.com/abechoi">Github</a>	
+			</div>
 		</div>
-
-		<div class="top-nav-right">
-			<a class="active" href="#home-section">Home</a>
-			<a href="#project-section">Projects</a>
-			<a href="#blog-section">Blogs</a>
-			<a href="#contact-section">About</a>
-			<a href="https://github.com/abechoi">Github</a>
-		</div>
-
 	</div>
 
 	<!----------
@@ -34,7 +35,8 @@
 	----------->
 	<section class="page-section" id="home-section">
 		<p class="section-title">HOME</p>
-		<div class="container animated">This is a box</div>
+		
+		
 
 	</section>
 
