Added animated gradient border on top-nav-bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!------------ 
 	Navigation Bar
 	------------->
-	<div class="container animated">
+	<div class="gradient-border" id="box">
 		<div class="top-nav">
 			<div class="top-nav-logo">
 				<a href="#home-section"><img class="logo" src="img/logo.png"></a>
@@ -29,6 +29,7 @@
 			</div>
 		</div>
 	</div>
+	
 
 	<!----------
 	Home Section
