Renamed .html and .css

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" name="author" content="Abe Choi">
-	<link rel="stylesheet" type="text/css" href="widescreen.css">
+	<link rel="stylesheet" type="text/css" href="my.css">
 	<title>IT Blogs & News</title>
 	<link class="flavicon" rel="icon" type="image/png" href="img/flavicon.png"/>
 </head>
